added initial implementation of PUT /restaurants/menu endpoint
