# internal/handler/orders/dto.go
@@ -7,6 +7,7 @@ import (
 	"github.com/google/uuid"
 	errs "github.com/talense-tasks/backend-trainee-assignment-autumn-2026-markgredasov-5b2b61ca/internal/errors"
 	"github.com/talense-tasks/backend-trainee-assignment-autumn-2026-markgredasov-5b2b61ca/internal/model/address"
+	"github.com/talense-tasks/backend-trainee-assignment-autumn-2026-markgredasov-5b2b61ca/internal/model/menu"
 	"github.com/talense-tasks/backend-trainee-assignment-autumn-2026-markgredasov-5b2b61ca/internal/model/money"
 	"github.com/talense-tasks/backend-trainee-assignment-autumn-2026-markgredasov-5b2b61ca/internal/model/order"
 )
@@ -155,4 +156,58 @@ type RejectOrderDTO struct {
 
 type UpdateOrderStatusDTO struct {
 	Status string `json:"status"`
+}
+
+type UpdateMenuItemDTO struct {
+	ID          uuid.UUID `json:"id"`
+	CategoryID  uuid.UUID `json:"category_id"`
+	Name        string    `json:"name"`
+	Description *string   `json:"description"`
+	Price       string    `json:"price"`
+	Available   bool      `json:"available"`
+}
+
+type UpdateMenuDTO struct {
+	Items []UpdateMenuItemDTO `json:"items"`
+}
+
+func updateMenuToModel(req UpdateMenuDTO) ([]menu.MenuItem, error) {
+	items := make([]menu.MenuItem, len(req.Items))
+	for i, it := range req.Items {
+		price, err := money.FromString(it.Price)
+		if err != nil {
+			return nil, errs.InvalidRequest("price must be positive number")
+		}
+		item := menu.MenuItem{
+			ID: it.ID,
+			Category: &menu.Category{
+				ID: it.CategoryID,
+			},
+			Name:        it.Name,
+			Description: it.Description,
+			Price:       price,
+			Available:   it.Available,
+		}
+		items[i] = item
+	}
+
+	return items, nil
+}
+
+func updateMenuToDTO(m []menu.MenuItem) UpdateMenuDTO {
+	items := make([]UpdateMenuItemDTO, len(m))
+	for i, it := range m {
+		item := UpdateMenuItemDTO{
+			ID:          it.ID,
+			CategoryID:  it.Category.ID,
+			Name:        it.Name,
+			Description: it.Description,
+			Price:       it.Price.String(),
+			Available:   it.Available,
+		}
+		items[i] = item
+	}
+	return UpdateMenuDTO{
+		Items: items,
+	}
 }
