# internal/handler/orders/update_restaurant_menu.go
@@ -8,22 +8,20 @@ import (
 	"github.com/talense-tasks/backend-trainee-assignment-autumn-2026-markgredasov-5b2b61ca/internal/server/http/response"
 )
 
-// AcceptOrder godoc
-// @Summary Принять заказ
-// @Description Принимает заказ
+// UpdateRestaurantMenu godoc
+// @Summary Обновить меню целиком
+// @Description Обновляет меню заведения целиком и возвращает обновленное меню. Блюда, которые отсутствуют в запросе, но присутствовали в меню помечаются как недоступные (available = false)
 // @Tags restaurant
 // @Accept json
 // @Produce json
 // @Param X-Restaurant-ID header string true "UUID ресторана. Замена авторизации в MVP." Format(uuid)
-// @Param 	id	 path string  true "Идентификатор заказа" Format(uuid)
-// @Success 200 {object} OrderDTO "Принятый заказ"
+// @Param 	RequestBody	body UpdateMenuDTO true "Тело запроса"
+// @Success 200 {object} UpdateMenuDTO "Обновленное меню"
 // @Success 400 {object} response.ErrorResponse "Невалидный запрос"
-// @Success 403 {object} response.ErrorResponse "Заказ не принадлежит данному ресторану"
-// @Success 404 {object} response.ErrorResponse "Заказ не найден"
-// @Success 409 {object} response.ErrorResponse "Конфликт при обновлении статуса заказа"
+// @Success 404 {object} response.ErrorResponse "Заведение не найдено"
 // @Failure 500 {object} response.ErrorResponse "Внутренняя ошибка сервера"
-// @Router /restaurants/orders/{id}/accept [post]
-func (h *handler) AcceptOrder(w http.ResponseWriter, r *http.Request) {
+// @Router /restaurants/menu [put]
+func (h *handler) UpdateRestaurantMenu(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := logger.FromContext(ctx)
 	rh := response.NewHTTPResponseHandler(log, w)
@@ -34,17 +32,23 @@ func (h *handler) AcceptOrder(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	orderID, err := request.GetUUIDPathValue(r, "id")
+	var req UpdateMenuDTO
+	if err = request.Decode(r, &req); err != nil {
+		rh.ErrorResponse(err)
+		return
+	}
+
+	newItems, err := updateMenuToModel(req)
 	if err != nil {
 		rh.ErrorResponse(err)
 		return
 	}
 
-	acceptedOrder, err := h.orders.AcceptOrder(ctx, *restaurantID, orderID)
+	items, err := h.catalog.ReplaceMenu(ctx, *restaurantID, newItems)
 	if err != nil {
 		rh.ErrorResponse(err)
 		return
 	}
 
-	rh.JSONResponse(toOrder(acceptedOrder), http.StatusOK)
+	rh.JSONResponse(updateMenuToDTO(items), http.StatusOK)
 }
